--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -73,10 +73,10 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    ">1%",
+    "last 7 versions",
+    "ios >= 8",
+    "android >= 5.0"
   ],
   "jest": {
     "collectCoverageFrom": [
