--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -33,6 +33,8 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
@@ -125,8 +127,11 @@
       {
         "libraryName": "antd",
         "libraryDirectory": "es",
-        "style": "css"
+        "style": "true"
       }
     ]
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-import": "^1.11.0"
+  }
 }
